<?xml version="1.0" encoding="UTF-8"?>
<resources>
<!--    <string name="app_name">Pachoo</string>-->
    <string name="google_android_key">AIzaSyA8cuJo_CoNYuttlR9g33WWCRlSMvRf_l4</string>

    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Welcome to Pachoo , Use below options to customize your experience</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="action_close">Close</string>
    <string name="title_home">Home</string>
    <string name="title_category">Categories</string>
    <string name="title_coupons">Coupons</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_booked">Bookings</string>
    <string name="title_profile">Profile</string>
    <string name="your_reset_email_message">We have send mail to %1$s click then in the mail to reset your password</string>
    <string name="reference_description">The best Location-based Deal Finding App! With exclusive offers, cash back deals,coupons &amp; great discounts. You can save money every time you visit restaurants,fashion stores,grocery shop,home appliances,furniture\s,spa etc at local and national merchant locations. Discover hot deals nearby &amp; choose from a wide range of categories.  </string>
    <string name="facebook_app_id">889622244832328</string>
    <string name="fb_login_protocol_scheme">fb852367885267517</string>
    <string name="shop_deal_offer">Upto %1$s off</string>
    <string name="shop_offer_percentage">Upto %1$s  off</string>
    <string name="deal_offer_percentage">%1$s  off</string>
    <string name="fav_offer">%1$s off </string>
    <string name="profile">Profile</string>
    <string name="deals_of_the_day_view_more_count">View More( %1$s )</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="privacy_policy_and_eula">By signing up you agree to our <b>Privacy Policy</b> and <b>EULA</b></string>
    <string name="error_api_key" translatable="false">No API key defined in gradle.properties</string>
    <string name="description">Description</string>
    <string name="dealsnest_with_exclematory">Pachoo !</string>
    <string name="welcome_to">Welcome to</string>
    <string name="or_login_via_email">or login via email</string>
    <string name="facebook">facebook</string>
    <string name="google">google</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="forgot_password_with_question">Forgot Password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="book_now">Book Now</string>
    <string name="no_bookings">No bookings</string>
    <string name="high_streets">Pachoo </string>
    <string name="hello_dealsnest">Hello, Pachoo </string>
    <string name="pound_symbol">\u20B9 </string>
    <string name="submit">Submit</string>
    <string name="no_coupons_available">No coupons available</string>
    <string name="deals">Deals</string>
    <string name="confirmed_email_has_been_sent_n_to_dealsnest_gmail_com">confirmed email has been sent \n to Pachoo @gmail.com</string>
    <string name="call">Call</string>
    <string name="percentage_symbol">%</string>
    <string name="login_as_guest">Login as guest</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_top_stop_destination">Your top stop destination</string>
    <string name="see_tap_shop">See . Tap . Shop</string>
    <string name="your_destination_to_shop">Your Destination To Shop</string>
    <string name="mobile">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="first_name">Name</string>
    <string name="send_me_reset_link">send me reset link</string>
    <string name="enter_your_email_we_ll_email_instructions_how_to_reset_your_password">Enter Your Email. We\'ll email instructions how to reset your password</string>
    <string name="view_deal">View Deal</string>
    <string name="home">Home</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="share_to_your_friends">Share To your friends</string>
    <string name="share_the_app_with_your_friends_and_earn_referral_income">Share the app with your friends and earn referral income</string>
    <string name="your_booking_has_been_confirmed">Your Booking has been confirmed</string>
    <string name="close">close</string>
    <string name="please_select_a_place_before_search">Please select a place before search</string>
    <string name="select_place">Select Place</string>
    <string name="restuarent_localities_amp_more"><![CDATA[Restuarent, localities, & more]]></string>
    <string name="version_name">Version </string>
    <string name="cart">Cart</string>
    <string name="add_to_cart">add to cart</string>
    <string name="confirm">Confirm</string>
    <string name="item_name">item name</string>
    <string name="item_description">item description</string>
    <string name="minus">-</string>
    <string name="_6">6</string>
    <string name="plus">+</string>
    <string name="remove">remove</string>
    <string name="view">view</string>
    <string name="add_address">add address</string>
    <string name="add_address_first_caps">Add Address</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="postcode">Zip code</string>
    <string name="state">State</string>
    <string name="address_line_2">Address Line</string>
    <string name="price_colon">Total Price:</string>
    <string name="price">price</string>
    <string name="sub_total_colon">Sub Total:</string>
    <string name="total_offer_colon">Total Offer:</string>
    <string name="grand_total_colon">Grand Total:</string>
    <string name="place_order">Place order</string>
    <string name="quantity_colon">Quantity:</string>
    <string name="_2">2</string>
    <string name="_continue">continue</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="pay_now">Pay now</string>
    <string name="collect_from_shop">Collect from shop</string>
    <string name="select_option">Select Option</string>
    <string name="review_booking">Review Booking</string>
    <string name="select_an_option">Select an option</string>
    <string name="select_state">Select State</string>
    <string name="select_county">Select County</string>
    <string name="select_city">Select City</string>
    <string name="county">County</string>
    <string name="number">Number</string>
    <string name="address">Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="save_address">save address</string>
    <string name="my_orders">My Orders</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_booking">My Booking</string>
    <string name="my_profile">My Profile</string>
    <string name="refer_a_friend">Refer a friend</string>
    <string name="notification">Notification</string>
    <string name="rate_app">Rate app</string>
    <string name="help">Help</string>
    <string name="orders">Orders</string>
    <string name="book_offer">Book Offer</string>
    <string name="select_an_address">Select an address</string>
    <string name="check">check</string>
    <string name="address_colon">Address:</string>
    <string name="delivery_charge_colon">Delivery charge:</string>
    <string name="service_charge_colon">Service charge:</string>
    <string name="_123">123</string>
    <string name="total_colon">Total Amount:</string>
    <string name="order_id_colon">Order ID:</string>
    <string name="_0">0</string>
    <string name="confirm_orders">Confirm Orders</string>
    <string name="order_details">Order Details</string>
    <string name="shipping_charge_colon">Shipping Charge:</string>
    <string name="total_charge_colon">Total Charge:</string>
    <string name="orderid_colon">OrderID:</string>
    <string name="details">Details</string>
    <string name="name_on_card">Name on card</string>
    <string name="card_number">Card number</string>
    <string name="cvv">CVV</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="proceed">Proceed</string>
    <string name="card_details">Card Details</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="status_colon">Status:</string>
    <string name="delivered">delivered</string>
    <string name="enter_postcode_to_check_availability">Enter postcode to check availability</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="cart_clear_message">Your cart is not empty it contains items from different location, Do you want to clear cart?</string>
    <string name="enter_your_card_information">Enter your card information</string>
    <string name="expiration_date">Expiration date</string>
    <string name="enter_your_cvv_on_card">Enter your CVV on card</string>
    <string name="let_s_hook_you_up_with_top_brands">let\'s hook you up with top brands</string>
    <string name="popular_shops_in_your_area">popular shops in your area</string>
    <string name="choose_area_or_city">Choose area or city</string>
    <string name="deals_of_the_day">Deals of the day</string>
    <string name="offers_for_you">offers for you</string>
    <string name="mostly_viewed">mostly viewed</string>
    <string name="postcode_check_result">postcode check result</string>
    <string name="you_have_no_orders">You have no orders</string>
    <string name="feeds">Feeds</string>
    <string name="my_address">My Address</string>
    <string name="invalid_pincode">Please enter a valid Post code</string>
    <string name="land_mark">Land Mark</string>
    <string name="house_no">House Number</string>
    <string name="login">Login</string>
    <string name="todays_special">Todays\'s Special</string>
    <string name="our_special">Our Special</string>
    <string name="add_wish">Add Wish</string>


</resources>
