<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ivItemImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ivItemImage"
        android:layout_marginLeft="@dimen/margin10"
        android:id="@+id/ll_main"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:maxLines="2"
            android:textStyle="bold"
            android:text="@string/item_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvQuantityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_colon"
                app:layout_constraintStart_toStartOf="@+id/tvItemName"
                app:layout_constraintTop_toBottomOf="@+id/tvItemName" />

            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:layout_marginStart="4dp"
                 />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvPriceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_colon"
                 />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_marginStart="4dp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_wishes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin5"
            android:text="@string/share_the_app_with_your_friends_and_earn_referral_income"
            android:visibility="visible"
            android:layout_marginRight="20dp"
            app:layout_constraintStart_toEndOf="@+id/ivItemImage"
            app:layout_constraintStart_toStartOf="@+id/tvPriceText"
            app:layout_constraintTop_toBottomOf="@+id/tvPriceText"
            />
        <TextView
            android:id="@+id/btnAddWish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin10"
            android:paddingRight="@dimen/margin10"
            android:paddingTop="@dimen/margin5"
            android:paddingBottom="@dimen/margin5"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            android:background="@drawable/button_bg_primary"
            android:text="@string/add_wish"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/ivItemImage"
            app:layout_constraintStart_toStartOf="@+id/tvPriceText"
            app:layout_constraintTop_toBottomOf="@+id/tvPriceText" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone">

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/button_bg_primary"
            android:gravity="center"
            android:text="@string/minus"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/_6" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_bg_primary"
            android:gravity="center"
            android:text="@string/plus"
            android:textColor="@color/white" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivRemove"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_delete"
        android:tint="@color/black"
        android:padding="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ll_main"/>

</RelativeLayout>